Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50081

Crash in QXcbWindow::setParent() due to NULL xcbScreen()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Beta
    • QPA: X11/XCB
    • None
    • eaa3a9d0108cdf692f1686cafefb7b834f0e5af6 f3114120f2d6f81f424ee542635c2711f66b516b

      Using the file dialogue in many KDE applications causes triggers a crash. This seems to be a regression following the changes made in QTBUG-42985 which removed a check for NULL xcbScreen() from the QXcbWindow::setParent() code.

      KDE report on QT 5.6.0 Beta using Fedora rawhide packages:
      https://bugs.kde.org/show_bug.cgi?id=356966

      KDE report on QT 5.5.1 using Fedora 23 packages which include a back port of the QTBUG-42985 changes:
      https://bugs.kde.org/show_bug.cgi?id=356583 (multiple duplicates)

      Thread 1 (Thread 0x7f94ac72e8c0 (LWP 2413)): [KCrash Handler] #5 0x00007f948dc6b408 in QXcbWindow::setParent (this=0x5595108d37c0, parent=0x0) at qxcbwindow.cpp:1426 #6 0x00007f94aaf063d3 in QWindow::setParent (this=0x559510a4dad0, parent=parent@entry=0x559510906ff0) at kernel/qwindow.cpp:621 #7 0x00007f94ab51a085 in QWidgetPrivate::setParent_sys (this=this@entry=0x559510712c00, newparent=newparent@entry=0x5595109fd1b0, f=...) at kernel/qwidget.cpp:10606 #8 0x00007f94ab5257d5 in QWidget::setParent (this=this@entry=0x559510687800, parent=parent@entry=0x5595109fd1b0, f=...) at kernel/qwidget.cpp:10461 #9 0x00007f94ab52685c in QWidget::setParent (this=this@entry=0x559510687800, parent=parent@entry=0x5595109fd1b0) at kernel/qwidget.cpp:10397 #10 0x00007f94ab60893c in QDialogButtonBox::addButton (this=0x5595109fd1b0, button=0x559510687800, role=QDialogButtonBox::AcceptRole) at widgets/qdialogbuttonbox.cpp:761 #11 0x00007f94875ea309 in KDEPlatformFileDialog::KDEPlatformFileDialog() () from /usr/lib64/qt5/plugins/platformthemes/KDEPlatformTheme.so #12 0x00007f94875ea5e2 in KDEPlatformFileDialogHelper::KDEPlatformFileDialogHelper() () from /usr/lib64/qt5/plugins/platformthemes/KDEPlatformTheme.so 
      ...
      

        For Gerrit Dashboard: QTBUG-50081
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            jburgess777 Jon Burgess
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes